sdks/swift/Sources/CGoudEngine/include/goud_engine.h

/**
 * Opaque identifier for an engine context.
 */
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
/**
 * Debug-only network simulation knobs applied per provider handle.
 */
typedef struct NetworkSimulationConfig {
    /**
     * Artificial one-way latency applied before outbound send.
     */
    uint32_t one_way_latency_ms;
    /**
     * Additional random jitter range in milliseconds.
     */
    uint32_t jitter_ms;
    /**
     * Packet loss percentage in `[0.0, 100.0]`.
     */
    float packet_loss_percent;
} NetworkSimulationConfig;
/**
 * FFI-safe aggregate network statistics for a provider handle.
 */
typedef struct FfiNetworkStats {
    /**
     * Total bytes sent across all connections.
     */
    uint64_t bytes_sent;
    /**
     * Total bytes received across all connections.
     */
    uint64_t bytes_received;
    /**
     * Total packets sent across all connections.
     */
    uint64_t packets_sent;
    /**
     * Total packets received across all connections.
     */
    uint64_t packets_received;
    /**
     * Total packets lost across all connections.
     */
    uint64_t packets_lost;
    /**
     * Most recent RTT sample in milliseconds.
     */
    float rtt_ms;
    /**
     * Send bandwidth over the rolling 1-second window.
     */
    float send_bandwidth_bytes_per_sec;
    /**
     * Receive bandwidth over the rolling 1-second window.
     */
    float receive_bandwidth_bytes_per_sec;
    /**
     * Packet loss percentage over the rolling 1-second window.
     */
    float packet_loss_percent;
    /**
     * Rolling RTT jitter in milliseconds.
     */
    float jitter_ms;
} FfiNetworkStats;
/**
 * Capabilities reported by a render provider.
 */
typedef struct RenderCapabilities {
    /**
     * Maximum number of texture units available.
     */
    uint32_t max_texture_units;
    /**
     * Maximum texture dimension (width or height).
     */
    uint32_t max_texture_size;
    /**
     * Whether hardware instancing is supported.
     */
    bool supports_instancing;
    /**
     * Whether compute shaders are supported.
     */
    bool supports_compute;
    /**
     * Whether multisample anti-aliasing is supported.
     */
    bool supports_msaa;
} RenderCapabilities;
/**
 * Capabilities reported by a physics provider.
 */
typedef struct PhysicsCapabilities {
    /**
     * Whether continuous collision detection is supported.
     */
    bool supports_continuous_collision;
    /**
     * Whether joints are supported.
     */
    bool supports_joints;
    /**
     * Maximum number of physics bodies.
     */
    uint32_t max_bodies;
} PhysicsCapabilities;
/**
 * Capabilities reported by an audio provider.
 */
typedef struct AudioCapabilities {
    /**
     * Whether spatial/3D audio is supported.
     */
    bool supports_spatial;
    /**
     * Maximum number of simultaneous audio channels.
     */
    uint32_t max_channels;
} AudioCapabilities;
/**
 * Capabilities reported by an input provider.
 */
typedef struct InputCapabilities {
    /**
     * Whether gamepad input is supported.
     */
    bool supports_gamepad;
    /**
     * Whether touch input is supported.
     */
    bool supports_touch;
    /**
     * Maximum number of simultaneous gamepads.
     */
    uint32_t max_gamepads;
} InputCapabilities;
/**
 * Static capability flags for a network provider.
 */
typedef struct NetworkCapabilities {
    /**
     * Whether this provider can act as a host (accept connections).
     */
    bool supports_hosting;
    /**
     * Maximum number of simultaneous connections.
     */
    uint32_t max_connections;
    /**
     * Maximum number of channels supported.
     */
    uint8_t max_channels;
    /**
     * Maximum size of a single message in bytes.
     */
    uint32_t max_message_size;
} NetworkCapabilities;
/* === Audio === */

/**
 * Activates audio playback on platforms that require explicit initialization.
 */
int32_t goud_audio_activate(struct GoudContextId context_id);
/**
 * Stops audio playback for the given player ID.
 */
int32_t goud_audio_stop(struct GoudContextId context_id, uint64_t player_id);
/**
 * Pauses audio playback for the given player ID.
 */
int32_t goud_audio_pause(struct GoudContextId context_id, uint64_t player_id);
/**
 * Resumes audio playback for the given player ID.
 */
int32_t goud_audio_resume(struct GoudContextId context_id, uint64_t player_id);
/**
 * Stops all currently playing audio.
 */
int32_t goud_audio_stop_all(struct GoudContextId context_id);
/**
 * Sets the global audio volume.
 */
int32_t goud_audio_set_global_volume(struct GoudContextId context_id, float volume);
/**
 * Sets the volume for a specific audio channel.
 */
int32_t goud_audio_set_channel_volume(struct GoudContextId context_id, uint8_t channel, float volume);
/**
 * Returns the current global audio volume.
 */
float goud_audio_get_global_volume(struct GoudContextId context_id);
/**
 * Returns the current volume for a specific audio channel.
 */
float goud_audio_get_channel_volume(struct GoudContextId context_id, uint8_t channel);
/**
 * Checks whether a specific player is currently playing audio.
 */
int32_t goud_audio_is_playing(struct GoudContextId context_id, uint64_t player_id);
/**
 * Returns the number of active audio players.
 */
int32_t goud_audio_active_count(struct GoudContextId context_id);
/**
 * Cleans up finished audio players.
 */
int32_t goud_audio_cleanup_finished(struct GoudContextId context_id);
/**
 * Plays audio from raw in-memory bytes on the default SFX channel.
 */
int64_t goud_audio_play(struct GoudContextId context_id, const uint8_t *asset_data, size_t asset_len);
/**
 * Plays audio on a specific channel.
 */
int64_t goud_audio_play_on_channel(struct GoudContextId context_id, const uint8_t *asset_data, size_t asset_len, uint8_t channel);
/**
 * Plays audio with full control over volume, speed, looping, and channel.
 */
int64_t goud_audio_play_with_settings(struct GoudContextId context_id, const uint8_t *asset_data, size_t asset_len, float volume, float speed, bool looping, uint8_t channel);
/**
 * Plays audio with spatial attenuation in 2D (`z = 0`).
 */
int64_t goud_audio_play_spatial(struct GoudContextId context_id, const uint8_t *asset_data, size_t asset_len, float source_x, float source_y, float listener_x, float listener_y, float max_distance, float rolloff);
/**
 * Plays audio with spatial attenuation in 3D.
 */
int64_t goud_audio_play_spatial_3d(struct GoudContextId context_id, const uint8_t *asset_data, size_t asset_len, float source_x, float source_y, float source_z, float listener_x, float listener_y, float listener_z, float max_distance, float rolloff);
/**
 * Updates attenuation for a playing spatial source in 2D (`z = 0`).
 */
int32_t goud_audio_update_spatial_volume(struct GoudContextId context_id, uint64_t player_id, float source_x, float source_y, float listener_x, float listener_y, float max_distance, float rolloff);
/**
 * Updates attenuation for a playing spatial source in 3D.
 */
int32_t goud_audio_update_spatial_volume_3d(struct GoudContextId context_id, uint64_t player_id, float source_x, float source_y, float source_z, float listener_x, float listener_y, float listener_z, float max_distance, float rolloff);
/**
 * Sets the spatial listener position in 2D (`z = 0`).
 */
int32_t goud_audio_set_listener_position(struct GoudContextId context_id, float x, float y);
/**
 * Sets the spatial listener position in 3D.
 */
int32_t goud_audio_set_listener_position_3d(struct GoudContextId context_id, float x, float y, float z);
/**
 * Sets (or starts tracking) a source position in 2D (`z = 0`).
 */
int32_t goud_audio_set_source_position(struct GoudContextId context_id, uint64_t player_id, float x, float y, float max_distance, float rolloff);
/**
 * Sets (or starts tracking) a source position in 3D.
 */
int32_t goud_audio_set_source_position_3d(struct GoudContextId context_id, uint64_t player_id, float x, float y, float z, float max_distance, float rolloff);
/**
 * Sets per-player volume.
 */
int32_t goud_audio_set_player_volume(struct GoudContextId context_id, uint64_t player_id, float volume);
/**
 * Sets per-player playback speed.
 */
int32_t goud_audio_set_player_speed(struct GoudContextId context_id, uint64_t player_id, float speed);
/**
 * Applies an immediate two-player crossfade mix in `[0, 1]`.
 */
int32_t goud_audio_crossfade(struct GoudContextId context_id, uint64_t from_player_id, uint64_t to_player_id, float mix);
/**
 * Starts a timed crossfade from an active sink to a newly played asset.
 */
int64_t goud_audio_crossfade_to(struct GoudContextId context_id, uint64_t from_player_id, const uint8_t *asset_data, size_t asset_len, float duration_sec, uint8_t channel);
/**
 * Starts additive mixing by layering a secondary asset on top of a primary sink.
 */
int64_t goud_audio_mix_with(struct GoudContextId context_id, uint64_t primary_player_id, const uint8_t *asset_data, size_t asset_len, float secondary_volume, uint8_t secondary_channel);
/**
 * Advances active timed crossfades.
 */
int32_t goud_audio_update_crossfades(struct GoudContextId context_id, float delta_sec);
/**
 * Returns the number of in-flight timed crossfades, or `-1` on failure.
 */
int32_t goud_audio_active_crossfade_count(struct GoudContextId context_id);
/* === Network === */

/**
 * Returns the number of active connections, or a negative error code.
 */
int32_t goud_network_peer_count(struct GoudContextId _context_id, int64_t handle);
/**
 * Sets an explicit overlay-handle override for this context.
 */
int32_t goud_network_set_overlay_handle(struct GoudContextId context_id, int64_t handle);
/**
 * Clears any explicit overlay-handle override for this context.
 */
int32_t goud_network_clear_overlay_handle(struct GoudContextId context_id);
/**
 * Applies a debug-only network simulation config to the provider handle.
 */
int32_t goud_network_set_simulation(struct GoudContextId _context_id, int64_t handle, struct NetworkSimulationConfig config);
/**
 * Clears any debug-only network simulation config from the provider handle.
 */
int32_t goud_network_clear_simulation(struct GoudContextId _context_id, int64_t handle);
/**
 * Creates a network host listening on the given port.
 */
int64_t goud_network_host(struct GoudContextId context_id, int32_t protocol, uint16_t port);
/**
 * Connects to a remote host. Returns a positive handle or negative error.
 */
int64_t goud_network_connect(struct GoudContextId context_id, int32_t protocol, const uint8_t *addr_ptr, int32_t addr_len, uint16_t port);
/**
 * Connects to a remote host and preserves the provider-assigned peer ID.
 */
int32_t goud_network_connect_with_peer(struct GoudContextId context_id, int32_t protocol, const uint8_t *addr_ptr, int32_t addr_len, uint16_t port, int64_t *out_handle, uint64_t *out_peer_id);
/**
 * Disconnects and destroys a network instance.
 */
int32_t goud_network_disconnect(struct GoudContextId _context_id, int64_t handle);
/**
 * Sends data to a specific peer on the given channel.
 */
int32_t goud_network_send(struct GoudContextId _context_id, int64_t handle, uint64_t peer_id, const uint8_t *data_ptr, int32_t data_len, uint8_t channel);
/**
 * Receives the next buffered message (queued by `goud_network_poll`).
 */
int32_t goud_network_receive(struct GoudContextId _context_id, int64_t handle, uint8_t *out_buf, int32_t buf_len, uint64_t *out_peer_id);
/**
 * Polls the network instance for new events, buffering received data
 */
int32_t goud_network_poll(struct GoudContextId _context_id, int64_t handle);
/**
 * Writes aggregate network statistics into caller-provided pointers.
 */
int32_t goud_network_get_stats(struct GoudContextId _context_id, int64_t handle, uint64_t *out_bytes_sent, uint64_t *out_bytes_recv, uint64_t *out_packets_sent, uint64_t *out_packets_recv);
/**
 * Writes aggregate network statistics into `out_stats`.
 */
int32_t goud_network_get_stats_v2(struct GoudContextId _context_id, int64_t handle, struct FfiNetworkStats *out_stats);
/* === Providers === */

/**
 * Queries the render provider's capabilities for the given context.
 */
int32_t goud_provider_render_capabilities(struct GoudContextId context_id, struct RenderCapabilities *out);
/**
 * Queries the physics provider's capabilities for the given context.
 */
int32_t goud_provider_physics_capabilities(struct GoudContextId context_id, struct PhysicsCapabilities *out);
/**
 * Queries the audio provider's capabilities for the given context.
 */
int32_t goud_provider_audio_capabilities(struct GoudContextId context_id, struct AudioCapabilities *out);
/**
 * Queries the input provider's capabilities for the given context.
 */
int32_t goud_provider_input_capabilities(struct GoudContextId context_id, struct InputCapabilities *out);
/**
 * Queries the network provider's capabilities for the given context.
 */
int32_t goud_provider_network_capabilities(struct GoudContextId context_id, struct NetworkCapabilities *out);
/**
 * Swaps the render provider to a null (no-op) provider at runtime.
 */
int32_t goud_provider_hot_swap_render(struct GoudContextId context_id, int32_t provider_type);
/**
 * Checks if the hot-swap keyboard shortcut (F5) was pressed and
 */
int32_t goud_provider_check_hot_swap_shortcut(struct GoudContextId context_id);
/* === Plugin === */

/**
 * Registers a plugin by its string ID.
 */
int32_t goud_plugin_register(struct GoudContextId context_id, const uint8_t *plugin_id_ptr, uint32_t plugin_id_len);
/**
 * Unregisters a plugin by its string ID.
 */
int32_t goud_plugin_unregister(struct GoudContextId context_id, const uint8_t *plugin_id_ptr, uint32_t plugin_id_len);
/**
 * Checks whether a plugin with the given ID is registered.
 */
int32_t goud_plugin_is_registered(struct GoudContextId context_id, const uint8_t *plugin_id_ptr, uint32_t plugin_id_len);
/**
 * Lists all registered plugin IDs as a newline-separated UTF-8 string.
 */
int32_t goud_plugin_list(struct GoudContextId context_id, uint8_t *out_buf, uint32_t buf_len);