sdks/python/goud_engine/generated/_ffi.py


    # network
    try:
        _lib.goud_network_host.argtypes = [GoudContextId, ctypes.c_int32, ctypes.c_uint16]
        _lib.goud_network_host.restype = ctypes.c_int64
        _lib.goud_network_connect.argtypes = [GoudContextId, ctypes.c_int32, ctypes.POINTER(ctypes.c_uint8), ctypes.c_int32, ctypes.c_uint16]
        _lib.goud_network_connect.restype = ctypes.c_int64
        _lib.goud_network_connect_with_peer.argtypes = [GoudContextId, ctypes.c_int32, ctypes.POINTER(ctypes.c_uint8), ctypes.c_int32, ctypes.c_uint16, ctypes.POINTER(ctypes.c_int64), ctypes.POINTER(ctypes.c_uint64)]
        _lib.goud_network_connect_with_peer.restype = ctypes.c_int32
        _lib.goud_network_disconnect.argtypes = [GoudContextId, ctypes.c_int64]
        _lib.goud_network_disconnect.restype = ctypes.c_int32
        _lib.goud_network_send.argtypes = [GoudContextId, ctypes.c_int64, ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_int32, ctypes.c_uint8]
        _lib.goud_network_send.restype = ctypes.c_int32
        _lib.goud_network_receive.argtypes = [GoudContextId, ctypes.c_int64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_int32, ctypes.POINTER(ctypes.c_uint64)]
        _lib.goud_network_receive.restype = ctypes.c_int32
        _lib.goud_network_poll.argtypes = [GoudContextId, ctypes.c_int64]
        _lib.goud_network_poll.restype = ctypes.c_int32
        _lib.goud_network_get_stats.argtypes = [GoudContextId, ctypes.c_int64, ctypes.POINTER(ctypes.c_uint64), ctypes.POINTER(ctypes.c_uint64), ctypes.POINTER(ctypes.c_uint64), ctypes.POINTER(ctypes.c_uint64)]
        _lib.goud_network_get_stats.restype = ctypes.c_int32
        _lib.goud_network_get_stats_v2.argtypes = [GoudContextId, ctypes.c_int64, ctypes.POINTER(FfiNetworkStats)]
        _lib.goud_network_get_stats_v2.restype = ctypes.c_int32
        _lib.goud_network_peer_count.argtypes = [GoudContextId, ctypes.c_int64]
        _lib.goud_network_peer_count.restype = ctypes.c_int32
        _lib.goud_network_set_overlay_handle.argtypes = [GoudContextId, ctypes.c_int64]
        _lib.goud_network_set_overlay_handle.restype = ctypes.c_int32
        _lib.goud_network_clear_overlay_handle.argtypes = [GoudContextId]
        _lib.goud_network_clear_overlay_handle.restype = ctypes.c_int32
        _lib.goud_network_set_simulation.argtypes = [GoudContextId, ctypes.c_int64, FfiNetworkSimulationConfig]
        _lib.goud_network_set_simulation.restype = ctypes.c_int32
        _lib.goud_network_clear_simulation.argtypes = [GoudContextId, ctypes.c_int64]
        _lib.goud_network_clear_simulation.restype = ctypes.c_int32
    except AttributeError:
        pass  # feature not compiled in

    # providers
    _lib.goud_provider_render_capabilities.argtypes = [GoudContextId, ctypes.POINTER(FfiRenderCapabilities)]
    _lib.goud_provider_render_capabilities.restype = ctypes.c_int32
    _lib.goud_provider_physics_capabilities.argtypes = [GoudContextId, ctypes.POINTER(FfiPhysicsCapabilities)]
    _lib.goud_provider_physics_capabilities.restype = ctypes.c_int32
    _lib.goud_provider_audio_capabilities.argtypes = [GoudContextId, ctypes.POINTER(FfiAudioCapabilities)]
    _lib.goud_provider_audio_capabilities.restype = ctypes.c_int32
    _lib.goud_provider_input_capabilities.argtypes = [GoudContextId, ctypes.POINTER(FfiInputCapabilities)]
    _lib.goud_provider_input_capabilities.restype = ctypes.c_int32
    _lib.goud_provider_network_capabilities.argtypes = [GoudContextId, ctypes.POINTER(FfiNetworkCapabilities)]
    _lib.goud_provider_network_capabilities.restype = ctypes.c_int32
    _lib.goud_provider_hot_swap_render.argtypes = [GoudContextId, ctypes.c_int32]
    _lib.goud_provider_hot_swap_render.restype = ctypes.c_int32
    _lib.goud_provider_check_hot_swap_shortcut.argtypes = [GoudContextId]
    _lib.goud_provider_check_hot_swap_shortcut.restype = ctypes.c_int32

    # plugin
    _lib.goud_plugin_register.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32]
    _lib.goud_plugin_register.restype = ctypes.c_int32
    _lib.goud_plugin_unregister.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32]
    _lib.goud_plugin_unregister.restype = ctypes.c_int32
    _lib.goud_plugin_is_registered.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32]
    _lib.goud_plugin_is_registered.restype = ctypes.c_int32
    _lib.goud_plugin_list.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_uint32]
    _lib.goud_plugin_list.restype = ctypes.c_int32

    # audio
    _lib.goud_audio_play.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
    _lib.goud_audio_play.restype = ctypes.c_int64
    _lib.goud_audio_play_on_channel.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t, ctypes.c_uint8]
    _lib.goud_audio_play_on_channel.restype = ctypes.c_int64
    _lib.goud_audio_play_with_settings.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t, ctypes.c_float, ctypes.c_float, ctypes.c_bool, ctypes.c_uint8]
    _lib.goud_audio_play_with_settings.restype = ctypes.c_int64
    _lib.goud_audio_stop.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_audio_stop.restype = ctypes.c_int32
    _lib.goud_audio_pause.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_audio_pause.restype = ctypes.c_int32
    _lib.goud_audio_resume.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_audio_resume.restype = ctypes.c_int32
    _lib.goud_audio_stop_all.argtypes = [GoudContextId]
    _lib.goud_audio_stop_all.restype = ctypes.c_int32
    _lib.goud_audio_set_global_volume.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_audio_set_global_volume.restype = ctypes.c_int32
    _lib.goud_audio_get_global_volume.argtypes = [GoudContextId]
    _lib.goud_audio_get_global_volume.restype = ctypes.c_float
    _lib.goud_audio_set_channel_volume.argtypes = [GoudContextId, ctypes.c_uint8, ctypes.c_float]
    _lib.goud_audio_set_channel_volume.restype = ctypes.c_int32
    _lib.goud_audio_get_channel_volume.argtypes = [GoudContextId, ctypes.c_uint8]
    _lib.goud_audio_get_channel_volume.restype = ctypes.c_float
    _lib.goud_audio_is_playing.argtypes = [GoudContextId, ctypes.c_uint64]
    _lib.goud_audio_is_playing.restype = ctypes.c_int32
    _lib.goud_audio_active_count.argtypes = [GoudContextId]
    _lib.goud_audio_active_count.restype = ctypes.c_int32
    _lib.goud_audio_cleanup_finished.argtypes = [GoudContextId]
    _lib.goud_audio_cleanup_finished.restype = ctypes.c_int32
    _lib.goud_audio_activate.argtypes = [GoudContextId]
    _lib.goud_audio_activate.restype = ctypes.c_int32
    _lib.goud_audio_play_spatial.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_audio_play_spatial.restype = ctypes.c_int64
    _lib.goud_audio_play_spatial_3d.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_audio_play_spatial_3d.restype = ctypes.c_int64
    _lib.goud_audio_update_spatial_volume.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_audio_update_spatial_volume.restype = ctypes.c_int32
    _lib.goud_audio_update_spatial_volume_3d.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_audio_update_spatial_volume_3d.restype = ctypes.c_int32
    _lib.goud_audio_set_listener_position.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float]
    _lib.goud_audio_set_listener_position.restype = ctypes.c_int32
    _lib.goud_audio_set_listener_position_3d.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_audio_set_listener_position_3d.restype = ctypes.c_int32
    _lib.goud_audio_set_source_position.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_audio_set_source_position.restype = ctypes.c_int32
    _lib.goud_audio_set_source_position_3d.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_audio_set_source_position_3d.restype = ctypes.c_int32
    _lib.goud_audio_set_player_volume.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float]
    _lib.goud_audio_set_player_volume.restype = ctypes.c_int32
    _lib.goud_audio_set_player_speed.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_float]
    _lib.goud_audio_set_player_speed.restype = ctypes.c_int32
    _lib.goud_audio_crossfade.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.c_uint64, ctypes.c_float]
    _lib.goud_audio_crossfade.restype = ctypes.c_int32
    _lib.goud_audio_crossfade_to.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t, ctypes.c_float, ctypes.c_uint8]
    _lib.goud_audio_crossfade_to.restype = ctypes.c_int64
    _lib.goud_audio_mix_with.argtypes = [GoudContextId, ctypes.c_uint64, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t, ctypes.c_float, ctypes.c_uint8]
    _lib.goud_audio_mix_with.restype = ctypes.c_int64
    _lib.goud_audio_update_crossfades.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_audio_update_crossfades.restype = ctypes.c_int32
    _lib.goud_audio_active_crossfade_count.argtypes = [GoudContextId]
    _lib.goud_audio_active_crossfade_count.restype = ctypes.c_int32
